--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,7 +2,8 @@
 @using DependencyInjection.Demo
 
 @*//Instead of creating an instance, we need this*@
-@inject Logic logic
+@inject ILogic logic
+@inject ILogger<Index> logger
 
 <PageTitle>Index</PageTitle>
 
@@ -17,6 +18,7 @@
     protected override void OnInitialized()
     {
         //logic = new();
+        logger.LogInformation("Display values of {value1} and {value2}", logic.Value1, logic.Value2);
     }
 
 
